macos/openim_sdk_ffi_apple.h

typedef struct {
    void (*onMethodChannel)(Dart_Port_DL port, char*, char*, char*, double*, char*);
	void (*onNativeMethodChannel)(char*, char*, char*, double*, char*);
} CGO_OpenIM_Listener;
extern void GetGroupMemberOwnerAndAdmin(char* operationID, char* groupID);
extern void GetGroupMemberListByJoinTimeFilter(char* operationID, char* groupID, int32_t offset, int32_t count, int64_t joinTimeBegin, int64_t joinTimeEnd, char* filterUserIDList);
extern void GetSpecifiedGroupMembersInfo(char* operationID, char* groupID, char* userIDList);
extern void KickGroupMember(char* operationID, char* groupID, char* reason, char* userIDList);
extern void TransferGroupOwner(char* operationID, char* groupID, char* newOwnerUserID);
extern void InviteUserToGroup(char* operationID, char* groupID, char* reason, char* userIDList);
extern void GetGroupApplicationListAsRecipient(char* operationID);
extern void GetGroupApplicationListAsApplicant(char* operationID);
extern void AcceptGroupApplication(char* operationID, char* groupID, char* fromUserID, char* handleMsg);
extern void RefuseGroupApplication(char* operationID, char* groupID, char* fromUserID, char* handleMsg);
extern void SetGroupMemberNickname(char* operationID, char* groupID, char* userID, char* groupMemberNickname);
extern void SearchGroupMembers(char* operationID, char* searchParam);
extern void IsJoinGroup(char* operationID, char* groupID);
extern void RegisterCallback(CGO_OpenIM_Listener* callback, Dart_Port_DL port);
extern char* GetSdkVersion();
extern _Bool InitSDK(char* operationID, char* config);
extern void Login(char* operationID, char* userID, char* token);
extern void Logout(char* operationID);
extern void SetAppBackgroundStatus(char* operationID, _Bool isBackground);
extern void NetworkStatusChanged(char* operationID);
extern int GetLoginStatus(char* operationID);