lib/openim_sdk_ffi_bindings_generated.dart


  late final _GetGroupMemberOwnerAndAdminPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('GetGroupMemberOwnerAndAdmin');
  late final _GetGroupMemberOwnerAndAdmin =
      _GetGroupMemberOwnerAndAdminPtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void GetGroupMemberListByJoinTimeFilter(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
    int offset,
    int count,
    int joinTimeBegin,
    int joinTimeEnd,
    ffi.Pointer<ffi.Char> filterUserIDList,
  ) {
    return _GetGroupMemberListByJoinTimeFilter(
      operationID,
      groupID,
      offset,
      count,
      joinTimeBegin,
      joinTimeEnd,
      filterUserIDList,
    );
  }

  late final _GetGroupMemberListByJoinTimeFilterPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Int32,
              ffi.Int32,
              ffi.Int64,
              ffi.Int64,
              ffi.Pointer<ffi.Char>)>>('GetGroupMemberListByJoinTimeFilter');
  late final _GetGroupMemberListByJoinTimeFilter =
      _GetGroupMemberListByJoinTimeFilterPtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int, int,
              int, int, ffi.Pointer<ffi.Char>)>();

  void GetSpecifiedGroupMembersInfo(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
    ffi.Pointer<ffi.Char> userIDList,
  ) {
    return _GetSpecifiedGroupMembersInfo(
      operationID,
      groupID,
      userIDList,
    );
  }

  late final _GetSpecifiedGroupMembersInfoPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('GetSpecifiedGroupMembersInfo');
  late final _GetSpecifiedGroupMembersInfo =
      _GetSpecifiedGroupMembersInfoPtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>();

  void KickGroupMember(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
    ffi.Pointer<ffi.Char> reason,
    ffi.Pointer<ffi.Char> userIDList,
  ) {
    return _KickGroupMember(
      operationID,
      groupID,
      reason,
      userIDList,
    );
  }

  late final _KickGroupMemberPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('KickGroupMember');
  late final _KickGroupMember = _KickGroupMemberPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void TransferGroupOwner(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
    ffi.Pointer<ffi.Char> newOwnerUserID,
  ) {
    return _TransferGroupOwner(
      operationID,
      groupID,
      newOwnerUserID,
    );
  }

  late final _TransferGroupOwnerPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('TransferGroupOwner');
  late final _TransferGroupOwner = _TransferGroupOwnerPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  void InviteUserToGroup(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
    ffi.Pointer<ffi.Char> reason,
    ffi.Pointer<ffi.Char> userIDList,
  ) {
    return _InviteUserToGroup(
      operationID,
      groupID,
      reason,
      userIDList,
    );
  }

  late final _InviteUserToGroupPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('InviteUserToGroup');
  late final _InviteUserToGroup = _InviteUserToGroupPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void GetGroupApplicationListAsRecipient(
    ffi.Pointer<ffi.Char> operationID,
  ) {
    return _GetGroupApplicationListAsRecipient(
      operationID,
    );
  }

  late final _GetGroupApplicationListAsRecipientPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'GetGroupApplicationListAsRecipient');
  late final _GetGroupApplicationListAsRecipient =
      _GetGroupApplicationListAsRecipientPtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>)>();

  void GetGroupApplicationListAsApplicant(
    ffi.Pointer<ffi.Char> operationID,
  ) {
    return _GetGroupApplicationListAsApplicant(
      operationID,
    );
  }

  late final _GetGroupApplicationListAsApplicantPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'GetGroupApplicationListAsApplicant');
  late final _GetGroupApplicationListAsApplicant =
      _GetGroupApplicationListAsApplicantPtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>)>();

  void AcceptGroupApplication(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
    ffi.Pointer<ffi.Char> fromUserID,
    ffi.Pointer<ffi.Char> handleMsg,
  ) {
    return _AcceptGroupApplication(
      operationID,
      groupID,
      fromUserID,
      handleMsg,
    );
  }

  late final _AcceptGroupApplicationPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('AcceptGroupApplication');
  late final _AcceptGroupApplication = _AcceptGroupApplicationPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void RefuseGroupApplication(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
    ffi.Pointer<ffi.Char> fromUserID,
    ffi.Pointer<ffi.Char> handleMsg,
  ) {
    return _RefuseGroupApplication(
      operationID,
      groupID,
      fromUserID,
      handleMsg,
    );
  }

  late final _RefuseGroupApplicationPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('RefuseGroupApplication');
  late final _RefuseGroupApplication = _RefuseGroupApplicationPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void SetGroupMemberNickname(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
    ffi.Pointer<ffi.Char> userID,
    ffi.Pointer<ffi.Char> groupMemberNickname,
  ) {
    return _SetGroupMemberNickname(
      operationID,
      groupID,
      userID,
      groupMemberNickname,
    );
  }

  late final _SetGroupMemberNicknamePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('SetGroupMemberNickname');
  late final _SetGroupMemberNickname = _SetGroupMemberNicknamePtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void SearchGroupMembers(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> searchParam,
  ) {
    return _SearchGroupMembers(
      operationID,
      searchParam,
    );
  }

  late final _SearchGroupMembersPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('SearchGroupMembers');
  late final _SearchGroupMembers = _SearchGroupMembersPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void IsJoinGroup(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
  ) {
    return _IsJoinGroup(
      operationID,
      groupID,
    );
  }

  late final _IsJoinGroupPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('IsJoinGroup');
  late final _IsJoinGroup = _IsJoinGroupPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void RegisterCallback(
    ffi.Pointer<CGO_OpenIM_Listener> callback,
    int port,
  ) {
    return _RegisterCallback(
      callback,
      port,
    );
  }

  late final _RegisterCallbackPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<CGO_OpenIM_Listener>,
              Dart_Port_DL)>>('RegisterCallback');
  late final _RegisterCallback = _RegisterCallbackPtr.asFunction<
      void Function(ffi.Pointer<CGO_OpenIM_Listener>, int)>();

  ffi.Pointer<ffi.Char> GetSdkVersion() {
    return _GetSdkVersion();
  }

  late final _GetSdkVersionPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
          'GetSdkVersion');
  late final _GetSdkVersion =
      _GetSdkVersionPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  bool InitSDK(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> config,
  ) {
    return _InitSDK(
      operationID,
      config,
    );
  }

  late final _InitSDKPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('InitSDK');
  late final _InitSDK = _InitSDKPtr.asFunction<
      bool Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void Login(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> userID,
    ffi.Pointer<ffi.Char> token,
  ) {
    return _Login(
      operationID,
      userID,
      token,
    );
  }

  late final _LoginPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('Login');
  late final _Login = _LoginPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  void Logout(
    ffi.Pointer<ffi.Char> operationID,
  ) {
    return _Logout(
      operationID,
    );
  }

  late final _LogoutPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'Logout');
  late final _Logout =
      _LogoutPtr.asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  void SetAppBackgroundStatus(
    ffi.Pointer<ffi.Char> operationID,
    bool isBackground,
  ) {
    return _SetAppBackgroundStatus(
      operationID,
      isBackground,
    );
  }

  late final _SetAppBackgroundStatusPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>, ffi.Bool)>>('SetAppBackgroundStatus');
  late final _SetAppBackgroundStatus = _SetAppBackgroundStatusPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, bool)>();

  void NetworkStatusChanged(
    ffi.Pointer<ffi.Char> operationID,
  ) {
    return _NetworkStatusChanged(
      operationID,
    );
  }

  late final _NetworkStatusChangedPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'NetworkStatusChanged');
  late final _NetworkStatusChanged = _NetworkStatusChangedPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>)>();

  int GetLoginStatus(
    ffi.Pointer<ffi.Char> operationID,
  ) {
    return _GetLoginStatus(
      operationID,
    );
  }
